# motion_control

./: .gitignore  .gitmodules  CMakeLists.txt  arm_toolchain_file.cmake  config.h  main.cpp
clearcore_viam_module/: error_pb2.py  error_pb2.pyi  main.py  motor.py  motor_pb2.py  motor_pb2.pyi  requirements.txt  sensor_pb2.pyi  sensors.py  wrapper_pb2.pyi
device_startup/: startup_SAME53.c
include/: error.pb.h  motor.pb.h  sensor.pb.h  serial_viam.hpp  wrapper.pb.h
proto/: error.proto  motor.proto  sensor.proto  wrapper.proto
src/: error.pb.c  main.cpp  motor.pb.c  sensor.pb.c  serial_viam.cpp  serial_viam.hpp  server.cpp  server.hpp  wrapper.pb.c
